--- a/homework/homework.ipynb
+++ b/homework/homework.ipynb
@@ -6,18 +6,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Carga de datos\n",
+    "\n",
     "import pandas as pd\n",
     "\n",
     "test_data = pd.read_csv(\n",
     "    \"../files/input/test_data.csv.zip\",\n",
-    "    index_col=False,\n",
-    "    compression=\"zip\",\n",
+    "    index_col = False,\n",
+    "    compression = \"zip\",\n",
     ")\n",
+    "\n",
     "\n",
     "train_data = pd.read_csv(\n",
     "    \"../files/input/train_data.csv.zip\",\n",
-    "    index_col=False,\n",
-    "    compression=\"zip\",\n",
+    "    index_col = False,\n",
+    "    compression = \"zip\",\n",
     ")"
    ]
   },
@@ -25,25 +28,24 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['ID', 'LIMIT_BAL', 'SEX', 'EDUCATION', 'MARRIAGE', 'AGE', 'PAY_0',\n",
-      "       'PAY_2', 'PAY_3', 'PAY_4', 'PAY_5', 'PAY_6', 'BILL_AMT1', 'BILL_AMT2',\n",
-      "       'BILL_AMT3', 'BILL_AMT4', 'BILL_AMT5', 'BILL_AMT6', 'PAY_AMT1',\n",
-      "       'PAY_AMT2', 'PAY_AMT3', 'PAY_AMT4', 'PAY_AMT5', 'PAY_AMT6', 'default'],\n",
-      "      dtype='object')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Paso 1.\n",
+    "# Realice la limpieza de los datasets:\n",
     "# - Renombre la columna \"default payment next month\" a \"default\".\n",
-    "test_data = test_data.rename(columns={'default payment next month': 'default'})\n",
-    "train_data = train_data.rename(columns={'default payment next month': 'default'})\n",
+    "# - Remueva la columna \"ID\".\n",
+    "# - Elimine los registros con informacion no disponible.\n",
+    "# - Para la columna EDUCATION, valores > 4 indican niveles superiores\n",
+    "#   de educación, agrupe estos valores en la categoría \"others\".\n",
+    "# - Renombre la columna \"default payment next month\" a \"default\"\n",
+    "# - Remueva la columna \"ID\".\n",
     "\n",
-    "print(test_data.columns)"
+    "test_data = test_data.rename(columns={'default payment next month' : 'default'})\n",
+    "\n",
+    "train_data = train_data.rename(columns={'default payment next month' : 'default'})\n",
+    "\n",
+    "# print(test_data.columns)\n",
+    "# print(train_data.columns)"
    ]
   },
   {
@@ -52,98 +54,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# - Remueva la columna \"ID\".\n",
-    "test_data=test_data.drop(columns=['ID'])\n",
-    "train_data=train_data.drop(columns=['ID'])"
+    "test_data = test_data.drop(columns=['ID'])\n",
+    "train_data = train_data.drop(columns=['ID'])\n",
+    "\n",
+    "# print(test_data.columns)\n",
+    "# print(train_data.columns)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "EDUCATION\n",
-      "2    9756\n",
-      "1    7476\n",
-      "3    3396\n",
-      "5     187\n",
-      "4      98\n",
-      "6      40\n",
-      "Name: count, dtype: int64\n",
-      "MARRIAGE\n",
-      "2    11226\n",
-      "1     9502\n",
-      "3      225\n",
-      "Name: count, dtype: int64\n",
-      "EDUCATION\n",
-      "2    4268\n",
-      "1    3105\n",
-      "3    1477\n",
-      "5      93\n",
-      "4      25\n",
-      "6      11\n",
-      "Name: count, dtype: int64\n",
-      "MARRIAGE\n",
-      "2    4728\n",
-      "1    4153\n",
-      "3      98\n",
-      "Name: count, dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# - Elimine los registros con informacion no disponible.\n",
-    "\n",
     "import numpy as np\n",
     "\n",
-    "# Para train_data\n",
     "train_data = train_data.loc[train_data[\"MARRIAGE\"] != 0]\n",
     "train_data = train_data.loc[train_data[\"EDUCATION\"] != 0]\n",
-    "print(train_data[\"EDUCATION\"].value_counts())\n",
-    "print(train_data[\"MARRIAGE\"].value_counts())\n",
     "\n",
-    "# Para test_data (corregido)\n",
     "test_data = test_data.loc[test_data[\"MARRIAGE\"] != 0]\n",
-    "test_data = test_data.loc[test_data[\"EDUCATION\"] != 0]\n",
-    "print(test_data[\"EDUCATION\"].value_counts())\n",
-    "print(test_data[\"MARRIAGE\"].value_counts())\n"
+    "test_data = test_data.loc[test_data[\"EDUCATION\"] != 0]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "EDUCATION\n",
-      "2    9756\n",
-      "1    7476\n",
-      "3    3396\n",
-      "4     325\n",
-      "Name: count, dtype: int64\n",
-      "EDUCATION\n",
-      "2    4268\n",
-      "1    3105\n",
-      "3    1477\n",
-      "4     129\n",
-      "Name: count, dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# - Para la columna EDUCATION, valores > 4 indican niveles superiores\n",
-    "test_data['EDUCATION'] = test_data['EDUCATION'].apply(lambda x: 4 if x > 4 else x)\n",
     "train_data['EDUCATION'] = train_data['EDUCATION'].apply(lambda x: 4 if x > 4 else x)\n",
-    "\n",
-    "print(train_data[\"EDUCATION\"].value_counts())\n",
-    "print(test_data[\"EDUCATION\"].value_counts())"
+    "test_data['EDUCATION'] = test_data['EDUCATION'].apply(lambda x: 4 if x > 4 else x)"
    ]
   },
   {
@@ -152,13 +92,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Paso 2.\n",
     "# Divida los datasets en x_train, y_train, x_test, y_test.\n",
-    "x_train=train_data.drop(columns=\"default\")\n",
-    "y_train=train_data[\"default\"]\n",
     "\n",
+    "x_train = train_data.drop(columns=\"default\")\n",
+    "y_train = train_data[\"default\"]\n",
     "\n",
-    "x_test=test_data.drop(columns=\"default\")\n",
-    "y_test=test_data[\"default\"]"
+    "x_test = test_data.drop(columns=\"default\")\n",
+    "y_test = test_data[\"default\"]"
    ]
   },
   {
@@ -167,6 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Paso 3.\n",
     "# Cree un pipeline para el modelo de clasificación. Este pipeline debe\n",
     "# contener las siguientes capas:\n",
     "# - Transforma las variables categoricas usando el método\n",
@@ -178,12 +120,9 @@
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
     "from sklearn.feature_selection import f_classif\n",
-    "# fclassifier\n",
     "\n",
-    "#Columnas categoricas\n",
-    "categorical_features=[\"SEX\",\"EDUCATION\",\"MARRIAGE\"]\n",
+    "categorical_features = [\"SEX\",\"EDUCATION\",\"MARRIAGE\"]\n",
     "\n",
-    "#preprocesador\n",
     "preprocessor = ColumnTransformer(\n",
     "    transformers=[\n",
     "        ('cat', OneHotEncoder(), categorical_features)\n",
@@ -191,10 +130,9 @@
     "    remainder=\"passthrough\"\n",
     ")\n",
     "\n",
-    "#pipeline\n",
-    "pipeline=Pipeline(\n",
+    "pipeline = Pipeline(\n",
     "    [\n",
-    "        (\"preprocessor\",preprocessor),\n",
+    "        ('preprocessor',preprocessor),\n",
     "        ('classifier', RandomForestClassifier(random_state=42))\n",
     "    ]\n",
     ")"
@@ -706,6 +644,7 @@
     }
    ],
    "source": [
+    "# Paso 4.\n",
     "# Optimice los hiperparametros del pipeline usando validación cruzada.\n",
     "# Use 10 splits para la validación cruzada. Use la función de precision\n",
     "# balanceada para medir la precisión del modelo.\n",
@@ -713,24 +652,22 @@
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.metrics import make_scorer, balanced_accuracy_score\n",
     "\n",
-    "\n",
-    "# Definir los hiperparámetros a optimizar\n",
     "param_grid = {\n",
-    "    'classifier__n_estimators': [100],  # Número de árboles\n",
-    "    'classifier__max_depth': [None],  # Profundidad máxima\n",
-    "    'classifier__min_samples_split': [10],  # Mínimo de muestras para dividir\n",
-    "    'classifier__min_samples_leaf': [4],   # Mínimo de muestras por hoja\n",
-    "    \"classifier__max_features\":[23]\n",
+    "    'classifier__n_estimators': [100],\n",
+    "    'classifier__max_depth': [None],\n",
+    "    'classifier__min_samples_split': [10],\n",
+    "    'classifier__min_samples_leaf': [4],\n",
+    "    'classifier__max_features': [23]\n",
     "}\n",
     "\n",
-    "model=GridSearchCV(\n",
+    "model = GridSearchCV(\n",
     "    pipeline,\n",
     "    param_grid,\n",
     "    cv=10,\n",
     "    scoring=\"balanced_accuracy\",\n",
     "    n_jobs=-1,\n",
-    "    refit=True\n",
-    "    )\n",
+    "    refit = True\n",
+    ")\n",
     "\n",
     "model.fit(x_train, y_train)"
    ]
@@ -742,16 +679,20 @@
    "outputs": [],
    "source": [
     "# Paso 5.\n",
-    "# Guarde el modelo como \"files/models/model.pkl\".\n",
+    "# Guarde el modelo (comprimido con gzip) como \"files/models/model.pkl.gz\".\n",
+    "# Recuerde que es posible guardar el modelo comprimido usanzo la libreria gzip.\n",
     "\n",
-    "import pickle\n",
     "import os\n",
+    "import gzip\n",
+    "import pickle\n",
     "\n",
     "models_dir = '../files/models'\n",
     "os.makedirs(models_dir, exist_ok=True)\n",
     "\n",
-    "with open(\"../files/models/model.pkl\",\"wb\") as file:\n",
-    "    pickle.dump(model,file)\n"
+    "# Guardar el modelo comprimido en formato gzip\n",
+    "gzip_path = os.path.join(models_dir, \"model.pkl.gz\")\n",
+    "with gzip.open(gzip_path, \"wb\") as gz_file:\n",
+    "    pickle.dump(model, gz_file)"
    ]
   },
   {
@@ -766,16 +707,19 @@
     "# Guardelas en el archivo files/output/metrics.json. Cada fila\n",
     "# del archivo es un diccionario con las metricas de un modelo.\n",
     "# Este diccionario tiene un campo para indicar si es el conjunto\n",
+    "# de entrenamiento o prueba. Por ejemplo:\n",
+    "#\n",
+    "# {'dataset': 'train', 'precision': 0.8, 'balanced_accuracy': 0.7, 'recall': 0.9, 'f1_score': 0.85}\n",
+    "# {'dataset': 'test', 'precision': 0.7, 'balanced_accuracy': 0.6, 'recall': 0.8, 'f1_score': 0.75}\n",
+    "#\n",
     "\n",
     "import json\n",
     "from sklearn.metrics import precision_score, recall_score, f1_score, balanced_accuracy_score\n",
     "\n",
-    "def calculate_and_save_metrics(model, X_train, X_test, y_train, y_test):\n",
-    "    # Hacer predicciones\n",
-    "    y_train_pred = model.predict(X_train)\n",
-    "    y_test_pred = model.predict(X_test)\n",
+    "def calculate_save_metrics(model, x_train, x_test, y_train, y_test):\n",
+    "    y_train_pred = model.predict(x_train)\n",
+    "    y_test_pred = model.predict(x_test)\n",
     "\n",
-    "    # Calcular métricas para el conjunto de entrenamiento\n",
     "    metrics_train = {\n",
     "        'type': 'metrics',\n",
     "        'dataset': 'train',\n",
@@ -785,7 +729,6 @@
     "        'f1_score': f1_score(y_train, y_train_pred, zero_division=0)\n",
     "    }\n",
     "\n",
-    "# Calcular métricas para el conjunto de prueba\n",
     "    metrics_test = {\n",
     "        'type': 'metrics',\n",
     "        'dataset': 'test',\n",
@@ -795,15 +738,13 @@
     "        'f1_score': f1_score(y_test, y_test_pred, zero_division=0)\n",
     "    }\n",
     "\n",
-    "    # Crear carpeta si no existe\n",
     "    output_dir = '../files/output'\n",
     "    os.makedirs(output_dir, exist_ok=True)\n",
     "\n",
-    "    # Guardar las métricas en un archivo JSON\n",
     "    output_path = os.path.join(output_dir, 'metrics.json')\n",
-    "    with open(output_path, 'w') as f:  # Usar 'w' para comenzar con un archivo limpio\n",
-    "        f.write(json.dumps(metrics_train) + '\\n')\n",
-    "        f.write(json.dumps(metrics_test) + '\\n')"
+    "    with open(output_path, 'w') as f:\n",
+    "        f.write(json.dumps(metrics_train)+ '\\n')\n",
+    "        f.write(json.dumps(metrics_test)+ '\\n')\n"
    ]
   },
   {
@@ -812,6 +753,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Paso 7.\n",
     "# Calcule las matrices de confusion para los conjuntos de entrenamiento y\n",
     "# prueba. Guardelas en el archivo files/output/metrics.json. Cada fila\n",
     "# del archivo es un diccionario con las metricas de un modelo.\n",
@@ -822,55 +764,58 @@
     "#\n",
     "\n",
     "from sklearn.metrics import confusion_matrix\n",
-    "# Función para calcular las matrices de confusión y guardarlas\n",
-    "def calculate_and_save_confusion_matrices(model, X_train, X_test, y_train, y_test):\n",
-    "    # Hacer predicciones\n",
-    "    y_train_pred = model.predict(X_train)\n",
-    "    y_test_pred = model.predict(X_test)\n",
     "\n",
-    "    # Calcular matrices de confusión\n",
+    "def calculate_save_cm(model, x_train, x_test, y_train, y_test):\n",
+    "    y_train_pred = model.predict(x_train)\n",
+    "    y_test_pred = model.predict(x_test)\n",
+    "\n",
+    "\n",
     "    cm_train = confusion_matrix(y_train, y_train_pred)\n",
     "    cm_test = confusion_matrix(y_test, y_test_pred)\n",
     "\n",
-    "    # Convertir las matrices de confusión en formato JSON\n",
-    "    def format_confusion_matrix(cm, dataset_type):\n",
+    "    def format_cm(cm, dataset_type):\n",
     "        return {\n",
     "            'type': 'cm_matrix',\n",
     "            'dataset': dataset_type,\n",
     "            'true_0': {\n",
-    "                'predicted_0': int(cm[0, 0]),\n",
-    "                'predicted_1': int(cm[0, 1])\n",
+    "                'predicted_0': int(cm[0,0]),\n",
+    "                'predicted_1': int(cm[0,1]),\n",
     "            },\n",
     "            'true_1': {\n",
-    "                'predicted_0': int(cm[1, 0]),\n",
-    "                'predicted_1': int(cm[1, 1])\n",
-    "            }\n",
-    "        }\n",
+    "                'predicted_0': int(cm[1,0]),\n",
+    "                'predicted_1': int(cm[1,1]),\n",
+    "            },\n",
     "\n",
+    "        }\n",
+    "    \n",
     "    metrics = [\n",
-    "        format_confusion_matrix(cm_train, 'train'),\n",
-    "        format_confusion_matrix(cm_test, 'test')\n",
+    "        format_cm(cm_train, 'train'),\n",
+    "        format_cm(cm_test, 'test')\n",
     "    ]\n",
     "\n",
-    "    # Guardar las matrices de confusión en el mismo archivo JSON\n",
+    "\n",
     "    output_path = '../files/output/metrics.json'\n",
-    "    with open(output_path, 'a') as f:  # Usar 'a' para agregar después de las métricas\n",
+    "    with open(output_path, 'a') as f:\n",
     "        for metric in metrics:\n",
-    "            f.write(json.dumps(metric) + '\\n')\n",
+    "            f.write(json.dumps(metric)+ '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main(model, x_train, x_test, y_train, y_test):\n",
     "\n",
-    "# Función principal para ejecutar todo\n",
-    "def main(model, X_train, X_test, y_train, y_test):\n",
-    "    # Crear el directorio de salida si no existe\n",
     "    import os\n",
-    "    os.makedirs('../files/output', exist_ok=True)\n",
+    "    #os.makedirs('../files/output', exist_ok=True)\n",
     "\n",
-    "    # Calcular y guardar las métricas\n",
-    "    calculate_and_save_metrics(model, X_train, X_test, y_train, y_test)\n",
+    "    calculate_save_metrics(model, x_train, x_test, y_train, y_test)\n",
     "\n",
-    "    # Calcular y guardar las matrices de confusión\n",
-    "    calculate_and_save_confusion_matrices(model, X_train, X_test, y_train, y_test)\n",
+    "    calculate_save_cm(model, x_train, x_test, y_train, y_test)\n",
     "\n",
-    "# Ejemplo de uso:\n",
+    "\n",
     "main(model, x_train, x_test, y_train, y_test)"
    ]
   },
